layout icon revize ve yeni sidebar mesaj bolumleri eklendi

--- a/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
@@ -6,18 +6,33 @@
                 <span class="menu-title">Gösterge Paneli</span>
             </a>
         </li>
-        <li class="nav-item" >
-            <a class="nav-link" href="/Writer/Message/Index">
-                <i class="icon-mail  menu-icon"></i>
-                <span class="menu-title">Mesajlar</span>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/ReceiverMessage">
+                <i class="mdi mdi-email-open  menu-icon"></i>
+                <span class="menu-title">Gelen Mesajlar</span>
             </a>
 
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/SenderMessage">
+                <i class="icon-mail  menu-icon"></i>
+                <span class="menu-title">Gönderilen Mesajlar</span>
+            </a>
 
-        <li class="nav-item" >
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/AddMessage">
+                <i class="mdi mdi-contact-mail  menu-icon"></i>
+                <span class="menu-title">Yeni Mesaj</span>
+            </a>
+
+        </li>
+
+        <li class="nav-item">
             <a class="nav-link" href="/Writer/Default/Index">
-                <i class="icon-grid-2 menu-icon"></i>
+                <i class="mdi mdi-information-outline menu-icon"></i>
                 <span class="menu-title">Duyurular</span>
             </a>
 
@@ -32,7 +47,7 @@
 
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Profile/Index">
-                <i class="mdi mdi-settings-box menu-icon"></i>
+                <i class="ti-settings menu-icon"></i>
                 <span class="menu-title">Ayarlar</span>
             </a>
         </li>
