duyurular ve gosterge paneli iconlari degistirildi

--- a/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_SidebarPartial.cshtml
@@ -2,7 +2,7 @@
     <ul class="nav">
         <li class="nav-item">
             <a class="nav-link" href="~/Writer/DashboardWriter/Index">
-                <i class="icon-grid menu-icon"></i>
+                <i class="mdi mdi-information-outline menu-icon"></i>
                 <span class="menu-title">Gösterge Paneli</span>
             </a>
         </li>
@@ -29,10 +29,11 @@
             </a>
 
         </li>
+ 
 
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Default/Index">
-                <i class="mdi mdi-information-outline menu-icon"></i>
+                <i class="ti-announcement menu-icon"></i>
                 <span class="menu-title">Duyurular</span>
             </a>
 
