--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessageDetails.cshtml
@@ -9,38 +9,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <style>
+        .table {
+            table-layout: fixed;
+        }
+
+            .table td {
+                overflow: hidden;
+                white-space: pre-wrap;
+                word-wrap: break-word;
+            }
+    </style>
+</head>
 
 <body>
-    <div class="content-wrapper">
-        <div class="row justify-content-center">
-            <div class="col-md-12 grid-margin stretch-card">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="card-title" style="font-size: 24px">@Model.Subject</p>
-                        <br />
-                        <p class="font-weight-500" style="font-size: 15px; word-break:break-word">@Model.MessageContent</p>
-                        <div class="text-right">
-                            <small><strong>@Model.Date.ToString("dd.MM.yyyy")</strong></small>
-                        </div>
-                        <br />
-                        <div class="row">
-                            <div class="col-md-6" style="text-align: left;">
-                                <p class="font-weight-500" style="font-size: 17px; word-break:break-word">Gönderen</p>
-                                <p >@Model.SenderName</p>
-                            </div>
-                            <div class="col-md-6" style="text-align: right;">
-                                <a href="/Writer/Message/ReceiverMessage" class="btn btn-danger">Geri</a>
-                            </div>
-                        </div>
+    <div class="col-lg-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Mesaj Detayı</h4>
+                <div class="table-responsive">
+                    <table border="1" bordercolordark="blue" class="table">
+                        <tr>
+                            <td><strong>Gönderen :</strong></td>
+                            <td colspan="3"><strong>@Model.SenderName</strong> [ @Model.Sender ]</td>
 
+                        </tr>
+                        <tr>
+                            <td ><strong>Konu :</strong></td>
+                            <td colspan="3">@Model.Subject</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Tarih :</strong></td>
+                            <td colspan="3">@(((DateTime)Model.Date).ToString("dd-MMM-yyyy"))</td>
 
+                        </tr>
+                        <tr>
+                            <td><strong>Mesaj :</strong></td>
+                            <td colspan="3">@Model.MessageContent</td>
+                        </tr>
+                    </table>
+                    <br />
+                    <div class="col-md-12" style="text-align: right;">
+                        <a href="/Writer/Message/ReceiverMessage" class="btn btn-danger">Geri</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+ 
 
 </body>
 
 </html>
+
+
+
+
+
+
 
