gelen kutusunda gönderen name sayfada gosterildi

--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
@@ -48,7 +48,7 @@
                             <td></td>
                             <td>@item.Subject</td>
                             <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
-                            <td>@item.Sender</td>
+                            <td>@item.SenderName</td>
 
                             <td><a href="/Writer/Message/ReceiverMessageDetails/@item.WriterMessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
                         </tr>
