--- a/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EntityLayer.Concrete
-@model List<UserMessage>
 
-<div class="col-md-6 col-xl-4 grid-margin stretch-card">
+
+@*<div class="col-md-6 col-xl-4 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
             <div class="d-flex flex-row justify-content-between">
@@ -30,4 +30,4 @@
 
         </div>
     </div>
-</div>
+</div>*@
