--- a/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/DashboardWriter/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="col-12 col-xl-8 mb-4 mb-xl-0">
                 <h3 class="font-weight-bold">Hoşgeldin, @ViewBag.v </h3>
                 <br />
-                <h6 class="font-weight-normal mb-0">AspNet Core Yazar Dashboard Paneli! Yeni Duyurular İçin <span class="text-primary"> Hemen Tıkla!</span></h6>
+                <h6 class="font-weight-normal mb-0">AspNet Core Yazar Dashboard Paneli! Yeni Duyurular İçin <a href="/Writer/Default/Index" class="text-primary"> Hemen Tıkla!</a></h6>
             </div>
             <div class="col-12 col-xl-4">
                 <div class="justify-content-end d-flex">
