--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -49,7 +49,7 @@
         </div>
     </li>
     <li class="nav-item nav-category">
-        <span class="nav-link">Navigation</span>
+        <span class="nav-link">Hızlı Erişim</span>
     </li>
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Dashboard/Index">
@@ -60,20 +60,14 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+        <a class="nav-link"  href="/Skill/Index" >
             <span class="menu-icon">
                 <i class="mdi mdi-laptop"></i>
             </span>
             <span class="menu-title">Yeteneklerim</span>
-            <i class="menu-arrow"></i>
+            
         </a>
-        <div class="collapse" id="ui-basic">
-            <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/buttons.html">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Typography</a></li>
-            </ul>
-        </div>
+        
     </li>
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Experience/Index">
