--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -2,45 +2,52 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Öne Çıkan Post Düzenleme Sayfası</h3>
-</div>
-<br />
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Öne Çıkan Post Düzenleme Sayfası</h4>
+            <form class="forms-sample" method="post">
 
-<form method="post">
-    @Html.HiddenFor(model => model.AboutId)
-    <div class="form-group">
-        <label>Başlık</label>
-        <input type="text" name="Title" class="form-control" value="@Model.Title" />
+
+                @Html.HiddenFor(model => model.AboutId)
+                <div class="form-group">
+                    <label for="exampleInputName1">Başlık</label>
+                    <input type="text" name="Title" class="form-control" value="@Model.Title" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Açıklama</label>
+                    <input type="text" name="Description" class="form-control" value="@Model.Description">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Yaş</label>
+                    <input type="text" name="Age" class="form-control" value="@Model.Age">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Mail</label>
+                    <input type="text" name="Mail" class="form-control" value="@Model.Mail">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Telefon</label>
+                    <input type="text" name="Phone" class="form-control" value="@Model.Phone">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Adres</label>
+                    <input type="text" name="Address" class="form-control" value="@Model.Address">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Resim</label>
+                    <input type="text" name="ImageUrl" class="form-control" value="@Model.ImageUrl">
+                </div>
+
+
+
+                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
+                <a href="/About" class="btn btn-dark">İptal</a>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Açıklama</label>
-        <input type="text" name="Description" class="form-control" value="@Model.Description">
-    </div>
-    <div class="form-group">
-        <label>Yaş</label>
-        <input type="text" name="Age" class="form-control" value="@Model.Age">
-    </div>
-    <div class="form-group">
-        <label>Mail</label>
-        <input type="text" name="Mail" class="form-control" value="@Model.Mail">
-    </div>
-    <div class="form-group">
-        <label>Telefon</label>
-        <input type="text" name="Phone" class="form-control" value="@Model.Phone">
-    </div>
-    <div class="form-group">
-        <label>Adres</label>
-        <input type="text" name="Address" class="form-control" value="@Model.Address">
-    </div>
-    <div class="form-group">
-        <label>Resim Yolu</label>
-        <input type="text" name="ImageUrl" class="form-control" value="@Model.ImageUrl">
-    </div>
-    <button type="submit" class="btn btn-success">Güncelle</button>
-    <a href="/About" class="btn btn-youtube">İptal</a>
-</form>
+</div>
 
