admin/about baslik revize edildi

--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Öne Çıkan Post Düzenleme Sayfası</h4>
+            <h4 class="card-title">Hakkımda Düzenleme Sayfası</h4>
             <form class="forms-sample" method="post">
 
 
