--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -78,11 +78,11 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/tables/basic-table.html">
+        <a class="nav-link" href="/About">
             <span class="menu-icon">
-                <i class="mdi mdi-table-large"></i>
+                <i class="mdi mdi-account"></i>
             </span>
-            <span class="menu-title">Tablolar</span>
+            <span class="menu-title">Hakkımnda</span>
         </a>
     </li>
     <li class="nav-item menu-items">
