admin/feature revize edildi

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -86,11 +86,11 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/charts/chartjs.html">
+        <a class="nav-link" href="/Feature">
             <span class="menu-icon">
-                <i class="mdi mdi-chart-bar"></i>
+                <i class="mdi mdi-arrange-bring-to-front"></i>
             </span>
-            <span class="menu-title">Grafikler</span>
+            <span class="menu-title">Öne Çıkan Gönderiler</span>
         </a>
     </li>
     <li class="nav-item menu-items">
@@ -133,14 +133,7 @@
             <span class="menu-title">Referanslar</span>
         </a>
     </li>
-    <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
-            <span class="menu-icon">
-                <i class="mdi mdi-arrange-bring-to-front"></i>
-            </span>
-            <span class="menu-title">Öne Çıkan Gönderiler</span>
-        </a>
-    </li>
+    
     <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
             <span class="menu-icon">
