--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Öne Çıkan Post Düzenleme Sayfası</h4>
+            <h4 class="card-title">Sayfa Giriş Yazısı Düzenleme </h4>
             <form class="forms-sample" method="post">
 
                 @Html.HiddenFor(model => model.FeatureId)
