admin/feature revize 2

--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -27,7 +27,7 @@
                     <input type="text" class="form-control" name="Title" value="@Model.Title">
                 </div>
                 <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <a href="/Feature" class="btn btn-dark">İptal</a>
+                <a href="/Dashboard/Index" class="btn btn-dark">İptal</a>
             </form>
         </div>
     </div>
