admin/portfolio ındex revize edildi

--- a/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Proje Ekleme Sayfası</h3>
+    <h3 class="mb-0 mr-auto">Proje Ekleme </h3>
 </div>
 <br />
 <form method="post">
