--- a/Core_Proje/Views/Portfolio/Index.cshtml
+++ b/Core_Proje/Views/Portfolio/Index.cshtml
@@ -6,66 +6,62 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="row">
 
-    <div class="card bg-default shadow">
-        <div class="card-header bg-transparent border-0 d-flex align-items-center">
-            <h3 class="text-white mb-0 mr-auto">Projelerim</h3>
+
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <h4 class="card-title mb-0">Projelerim</h4>
             <a href="/Portfolio/AddPortfolio" class="btn btn-success">Proje Ekle</a>
         </div>
+
         <div class="table-responsive">
-            <table class="table align-items-center table-dark table-flush">
-                <thead class="thead-dark">
+            <table class="table">
+                <thead>
                     <tr>
-                        <th scope="col" class="sort" data-sort="name">Proje</th>
-                        <th scope="col" class="sort" data-sort="budget">Ücret</th>
-                        <th scope="col" class="sort" data-sort="status">Durum</th>
-                        @*<th scope="col">Görseller</th>*@
-                        <th scope="col" class="sort" data-sort="completion">İlerleme</th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
+                        <th>Proje</th>
+                        <th>Ücret</th>
+                        <th>Durum</th>
+                        <th>İlerleme</th>
+
+                        <th></th>
                     </tr>
                 </thead>
-                <tbody class="list">
+                <tbody>
                     @foreach (var item in Model)
                     {
-                    <tr>
-                        <th scope="row">
-                            <div class="media align-items-center">
-                                <a href="#" class="avatar rounded-circle mr-3">
-                                    <img alt="Image placeholder" src="@item.Platform">
-                                </a>
-                                <div class="media-body">
-                                    <span class="name mb-0 text-sm">@item.Name</span>
-                                </div>
-                            </div>
-                        </th>
-                        <td class="budget">
-                            @item.Price
-                        </td>
-                        <td>
-                            <span class="badge badge-dot mr-4">
-                                <i class="bg-success"></i>
-                                <span class="status">Tamamlandı</span>
-                            </span>
-                        </td>
-                        
-                        <td>
-                            <div class="d-flex align-items-center">
-                                <span class="completion mr-2">@item.Value%</span>
-                                <div>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%;"></div>
+
+
+                        <tr>
+
+                            <td scope="row">
+                                <div class="media align-items-center">
+                                    <a href="#" class="avatar rounded-circle mr-3">
+                                        <img alt="Image placeholder" src="@item.Platform">
+                                    </a>
+                                    <div class="media-body">
+                                        <span class="name mb-0 text-sm">@item.Name</span>
                                     </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td> <a href="/Portfolio/DeletePortfolio/@item.PortfolioId" class="btn btn-youtube">Sil</a></td>
-                        <td> <a href="/Portfolio/EditPortfolio/@item.PortfolioId" class="btn btn-info">Güncelle</a></td>
+                            </td>
+                            <td>@item.Price</td>
 
-                    </tr>
+                            @if (item.Value == 100)
+                            {
+                                <td>Tamamladı</td>
+                            }
+                            else
+                            {
+                                <td>Devam Ediyor</td>
+                            }
+
+                            <td>@item.Value%</td>
+
+                            <td> <a href="/Portfolio/DeletePortfolio/@item.PortfolioId" class="btn btn-youtube">Sil</a></td>
+                            <td> <a href="/Portfolio/EditPortfolio/@item.PortfolioId" class="btn btn-info">Güncelle</a></td>
+                        </tr>
+
                     }
-
                 </tbody>
             </table>
         </div>
