admin/portfolio guncelleme revize edildi

--- a/Core_Proje/Views/Portfolio/Index.cshtml
+++ b/Core_Proje/Views/Portfolio/Index.cshtml
@@ -46,7 +46,7 @@
                             </td>
                             <td>@item.Price</td>
 
-                            @if (item.Value == 100)
+                            @if (item.Value >= 100)
                             {
                                 <td>Tamamladı</td>
                             }
