admin/service ekleme guncelleme ve index revize edildi

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -94,11 +94,11 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/pages/icons/mdi.html">
+        <a class="nav-link" href="/Service">
             <span class="menu-icon">
-                <i class="mdi mdi-contacts"></i>
+                <i class="mdi mdi-routes"></i>
             </span>
-            <span class="menu-title">İkonlar</span>
+            <span class="menu-title">Hizmetler</span>
         </a>
     </li>
     <li class="nav-item menu-items">
@@ -152,12 +152,5 @@
             </ul>
         </div>
     </li>
-    <li class="nav-item menu-items">
-        <a class="nav-link" href="http://www.bootstrapdash.com/demo/corona-free/jquery/documentation/documentation.html">
-            <span class="menu-icon">
-                <i class="mdi mdi-file-document-box"></i>
-            </span>
-            <span class="menu-title">Dökümanlar</span>
-        </a>
-    </li>
+    
 </ul>
