--- a/Core_Proje/Views/Service/AddService.cshtml
+++ b/Core_Proje/Views/Service/AddService.cshtml
@@ -4,19 +4,24 @@
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Hizmet Ekleme Sayfası</h3>
+
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Hizmet Ekleme</h4>
+            <form method="post">
+                <div class="form-group">
+                    <label>Hizmet Başlığı</label>
+                    <input type="text" name="Title" class="form-control" placeholder="Hizmet Adı Giriniz" />
+                </div>
+                <div class="form-group">
+                    <label>Resim Yolu</label>
+                    <input type="text" name="ImageUrl" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-success">Kaydet</button>
+                <a href="/Service" class="btn btn-youtube">İptal</a>
+            </form>
+
+        </div>
+    </div>
 </div>
-<br />
-<form method="post">
-    <div class="form-group">
-        <label>Yetenek Başlığı</label>
-        <input type="text" name="Title" class="form-control" placeholder="Hizmet Adı Giriniz" />
-    </div>
-    <div class="form-group">
-        <label>Resim Yolu</label>
-        <input type="text" name="ImageUrl" class="form-control" >
-    </div>
-    <button type="submit" class="btn btn-success">Kaydet</button>
-    <a href="/Service" class="btn btn-youtube">İptal</a>
-</form>
