--- a/Core_Proje/Views/Service/Index.cshtml
+++ b/Core_Proje/Views/Service/Index.cshtml
@@ -8,44 +8,47 @@
 
 
 }
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Hizmetlerim</h3>
-    <a href="/Service/AddService" class="btn btn-success">Hizmet Ekle</a>
-</div>
-<!-- Light table -->
-<div class="table-responsive">
-    <table class="table align-items-center table-flush">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" class="sort" data-sort="name">#</th>
-                <th scope="col" class="sort" data-sort="budget">Başlık</th>
-                <th scope="col" class="sort" data-sort="status"></th>
-                <th scope="col"></th>
-                <th scope="col" class="sort" data-sort="completion"></th>
 
-            </tr>
-        </thead>
-        <tbody class="list">
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.ServiceId
-                    </td>
-                    <td class="budget">
-                        @item.Title
-                    </td>
 
-                    <td>
-                        
-                    <td> <a href="/Service/DeleteService/@item.ServiceId" class="btn btn-youtube">Sil</a></td>
-                    <td> <a href="/Service/EditService/@item.ServiceId" class="btn btn-info">Güncelle</a></td>
 
-                </tr>
-            }
-        </tbody>
-    </table>
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body d-flex justify-content-between align-items-center">
+            <h4 class="card-title mb-0">Hizmetlerim</h4>
+            <a href="/Service/AddService" class="btn btn-success">Hizmet Ekle</a>
+        </div>
 
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Başlık</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+
+
+                    <tr>
+                      
+                        <td class="budget">
+                            @item.Title
+                        </td>
+
+                        <td>
+
+                        <td> <a href="/Service/DeleteService/@item.ServiceId" class="btn btn-youtube">Sil</a></td>
+                        <td> <a href="/Service/EditService/@item.ServiceId" class="btn btn-info">Güncelle</a></td>
+
+                    </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 
