admin/contact index olusturuldu bu sayede siteden mail atanlara ulasicagiz

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -52,6 +52,14 @@
         <span class="nav-link">Hızlı Erişim</span>
     </li>
     <li class="nav-item menu-items">
+        <a class="nav-link" href="/Default/Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-web"></i>
+            </span>
+            <span class="menu-title"> Siteye Git</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
         <a class="nav-link" href="/Dashboard/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
@@ -60,14 +68,14 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link"  href="/Skill/Index" >
+        <a class="nav-link" href="/Skill/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-laptop"></i>
             </span>
             <span class="menu-title">Yeteneklerim</span>
-            
+
         </a>
-        
+
     </li>
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Experience/Index">
@@ -133,7 +141,7 @@
             <span class="menu-title">Referanslar</span>
         </a>
     </li>
-    
+
     <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
             <span class="menu-icon">
@@ -152,5 +160,5 @@
             </ul>
         </div>
     </li>
-    
+
 </ul>
