--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -126,7 +126,7 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/icons/mdi.html">
+        <a class="nav-link" href="/Contact/">
             <span class="menu-icon">
                 <i class="mdi mdi-account-card-details"></i>
             </span>
