--- a/Core_Proje/Views/AdminMessage/ReceiverMessageDetails.cshtml
+++ b/Core_Proje/Views/AdminMessage/ReceiverMessageDetails.cshtml
@@ -1,7 +1,7 @@
-﻿@model EntityLayer.Concrete.Message
+﻿@model EntityLayer.Concrete.WriterMessage
 
 @{
-    ViewData["Title"] = "ContactDetails";
+    ViewData["Title"] = "ReceiverMessageDetails";
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
@@ -20,10 +20,10 @@
                 word-wrap: break-word;
                 color: white;
             }
-
         table, th, td {
             border: 2px solid antiquewhite;
         }
+      
     </style>
 </head>
 
@@ -33,13 +33,16 @@
             <div class="card-body">
                 <h4 class="card-title">Mesaj Detayı</h4>
                 <div class="table-responsive">
-                    <table  class="table">
+                    <table class="table">
                         <tr>
-                            <td style="width:120px !important;"><strong>Gönderen :</strong></td>
-                            <td colspan="6"><strong>@Model.Name</strong> [ @Model.Mail ]</td>
+                            <td  style="width:120px !important;"><strong>Gönderen :</strong></td>
+                            <td  colspan="6"><strong >@Model.SenderName</strong> [ @Model.Sender ]</td>
 
                         </tr>
-                        
+                        <tr>
+                            <td style="width:120px !important;"><strong>Konu :</strong></td>
+                            <td colspan="6">@Model.Subject</td>
+                        </tr>
                         <tr>
                             <td style="width:120px !important;"><strong>Tarih :</strong></td>
                             <td colspan="6">@(((DateTime)Model.Date).ToString("dd-MMM-yyyy"))</td>
@@ -47,12 +50,12 @@
                         </tr>
                         <tr>
                             <td style="width:120px !important;"><strong>Mesaj :</strong></td>
-                            <td colspan="6">@Model.Content</td>
+                            <td colspan="6" >@Model.MessageContent</td>
                         </tr>
                     </table>
                     <br />
                     <div class="col-md-12" style="text-align: right;">
-                        <a href="/Contact" class="btn btn-danger">Geri</a>
+                        <a href="/AdminMessage/ReceiverMessageList" class="btn btn-danger">Geri</a>
                     </div>
                 </div>
             </div>
@@ -63,4 +66,6 @@
 </body>
 
 </html>
+
+
 
