--- a/Core_Proje/Views/AdminMessage/ReceiverMessageList.cshtml
+++ b/Core_Proje/Views/AdminMessage/ReceiverMessageList.cshtml
@@ -9,7 +9,11 @@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Gelen Kutusu</h4>
+
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="card-title mb-0">Gelen Kutusu</h4>
+                <a href="/AdminMessage/AdminMessageSend" class="btn btn-success">Mesaj Gönder</a>
+            </div>
 
             <div class="table-responsive">
                 <table class="table">
@@ -19,8 +23,7 @@
                             <th>Gönderen</th>
                             <th>Konu</th>
                             <th>Tarih</th>
-                            <th></th>
-                            <th></th>
+                            
                         </tr>
                     </thead>
                     <tbody>
@@ -39,6 +42,7 @@
                     </tbody>
                 </table>
             </div>
+
         </div>
     </div>
 </div>
