--- a/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
+++ b/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
@@ -9,8 +9,10 @@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Giden Kutusu</h4>
-
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="card-title mb-0">Giden Kutusu</h4>
+                <a href="/AdminMessage/AdminMessageSend" class="btn btn-success">Mesaj Gönder</a>
+            </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
