--- a/Core_Proje/Views/AdminMessage/ReceiverMessageList.cshtml
+++ b/Core_Proje/Views/AdminMessage/ReceiverMessageList.cshtml
@@ -11,7 +11,7 @@
         <div class="card-body">
 
             <div class="d-flex justify-content-between align-items-center mb-3">
-                <h4 class="card-title mb-0">Gelen Kutusu</h4>
+                <h4 class="card-title mb-0">Gelen Mesajlar</h4>
                 <a href="/AdminMessage/AdminMessageSend" class="btn btn-success">Mesaj Gönder</a>
             </div>
 
