--- a/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
+++ b/Core_Proje/Views/AdminMessage/SenderMessageList.cshtml
@@ -10,7 +10,7 @@
     <div class="card">
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center mb-3">
-                <h4 class="card-title mb-0">Giden Kutusu</h4>
+                <h4 class="card-title mb-0">Gönderilen Mesajlar</h4>
                 <a href="/AdminMessage/AdminMessageSend" class="btn btn-success">Mesaj Gönder</a>
             </div>
             <div class="table-responsive">
