navside bar revize edildi ana sayfadaki alt iletisim bilgileri icin controller ve index olusturuldu eksik olan bussines kodlari tamamlandi

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -117,7 +117,7 @@
             <span class="menu-title">Projeler</span>
         </a>
     </li>
-    
+
 
     <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#message" aria-expanded="false" aria-controls="message">
@@ -136,14 +136,25 @@
         </div>
     </li>
 
+    
+
     <li class="nav-item menu-items">
-        <a class="nav-link" href="/Contact/">
+        <a class="nav-link" data-toggle="collapse" href="#contact" aria-expanded="false" aria-controls="contact">
             <span class="menu-icon">
                 <i class="mdi mdi-account-card-details"></i>
             </span>
             <span class="menu-title">İletişim</span>
+            <i class="menu-arrow"></i>
         </a>
+        <div class="collapse" id="contact">
+            <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="/Contact"> Sayfadan Gelen Mesajlar </a></li>
+                <li class="nav-item"> <a class="nav-link" href="/ContactSubplace"> Alt İletişim Bilgileri </a></li>
+                
+            </ul>
+        </div>
     </li>
+
     <li class="nav-item menu-items">
         <a class="nav-link" href="/Testimonial">
             <span class="menu-icon">
