admin/socialmedia icin bussinesin eksik kodlari hazirlandi controller ve index olusturuldu

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -150,7 +150,8 @@
             <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="/Contact"> Sayfadan Gelen Mesajlar </a></li>
                 <li class="nav-item"> <a class="nav-link" href="/ContactSubplace"> Alt İletişim Bilgileri </a></li>
-                
+                <li class="nav-item"> <a class="nav-link" href="/SocialMedia"> Sosyal Medya </a></li>
+
             </ul>
         </div>
     </li>
