--- a/Core_Proje/Views/SocialMedia/Index.cshtml
+++ b/Core_Proje/Views/SocialMedia/Index.cshtml
@@ -1,8 +1,44 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<SocialMedia>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="col-lg-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="card-title mb-0">Sosyal Medya Hesapları</h4>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Platform</th>
+                            <th>Link</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td></td>
+                                <td>@item.Name</td>
+                                <td>@item.Url</td>
+                                <td></td>
+                                <td><a href="/SocialMedia/EditSocialMedia/@item.SocialMediaId" class="btn btn-warning">Güncelle</a></td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+</div>
 
