admin/socialmedia icin ana sayfa gosterimi sayfasi partiala tasindi ve if else sarti ile listelendi bu sayede urlsi olmayan # ile atanıyor

--- a/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
+++ b/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
@@ -12,6 +12,7 @@
             <form class="forms-sample" method="post">
 
                 @Html.HiddenFor(model => model.SocialMediaId)
+                @Html.HiddenFor(model => model.Icon)
 
                 <div class="form-group">
                     <label for="exampleInputName1">Platform</label>
