--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -60,6 +60,14 @@
         </a>
     </li>
     <li class="nav-item menu-items">
+        <a class="nav-link" href="/Writer/DashboardWriter/Index">
+            <span class="menu-icon">
+                <i class="mdi mdi-wechat"></i>
+            </span>
+            <span class="menu-title"> Yazar Sayfasına Git</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
         <a class="nav-link" href="/Dashboard/Index">
             <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
@@ -136,7 +144,7 @@
         </div>
     </li>
 
-    
+
 
     <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#contact" aria-expanded="false" aria-controls="contact">
